--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hello World</p>
+    <header>
+        <Div>
+            <p>Game News</p>
+        </Div>
+    </header>
 
 </body>
 </html>
