--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <Div>
-            <p>Game News</p>
-        </Div>
+        <a href="https://vinicuunha.github.io/"><img id="logo" src="./imagens/logo.png" alt=""></a>
+        <div>
+            
+        </div>
     </header>
 
 </body>
