--- a/index.html
+++ b/index.html
@@ -8,11 +8,22 @@
 </head>
 <body>
     <header>
-        <a href="https://vinicuunha.github.io/"><img id="logo" src="./imagens/logo.png" alt=""></a>
-        <div>
-            
+        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="./src/imagens/logo.png" alt=""></a>
+        <div class="cabecalho">
+            <a href="./src/pages/breakingnews/breakingNews.html">Breaking News</a>
+            <a href="./src/pages/curiosidades/curiosidades.html">Curiosidades</a>
+            <a href="./src/pages/fps/fps.html">FPS</a>
+            <a href="./src/pages/esporte/esporte.html">Esporte</a>
+            <a href="./src/pages/rpg/rpg.html">RPG</a>
+            <a href="./src/pages/simulação/simulacao.html">Simulação</a>
         </div>
     </header>
-
+    <main>
+        <div class="grid-layout">
+            <div class="item grande"><a href="http://"><img src="/src/imagens/gta6.png" alt=""></a></div>
+            <div class="item pequeno"><a href="http://"><img src="/src/imagens/psp.jpg" alt="" width="400px"></a></div>
+            <div class="item pequeno"></div>
+        </div>
+    </main>
 </body>
 </html>
