Update image links to point to external URLs

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </header>
     <main>
         <div class="grid-layout">
-            <div class="item grande"><a href="http://"><img src="/src/imagens/gta6.png" alt=""></a></div>
-            <div class="item pequeno"><a href="http://"><img src="/src/imagens/psp.jpg" alt="" width="400px"></a></div>
+            <div class="item grande"><a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img src="./src/imagens/gta6.png" alt=""></a></div>
+            <div class="item pequeno"><a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img src="./src/imagens/psp.jpg" alt="" width="400px"></a></div>
             <div class="item pequeno"></div>
         </div>
     </main>
