--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
 </head>
 <body>
     <header>
-        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="/src/imagens/logo.png" alt="Logo Game News"></a>
+        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="./src/imagens/logo.png" alt="Logo Game News"></a>
         <div class="cabecalho">
             <a href="https://vinicuunha.github.io/projeto_diu.github.io/">Início</a>
-            <a href="/src/pages/breakingnews/breakingNews.html">Breaking News</a>
-            <a href="/src/pages/curiosidades/curiosidades.html">Curiosidades</a>
-            <a href="/src/pages/esporte/esporte.html">Esporte</a>
-            <a href="/src/pages/fps/fps.html">FPS</a>
-            <a href="/src/pages/rpg/rpg.html">RPG</a>
-            <a href="/src/pages/simulacao/simulacao.html">Simulação</a>
+            <a href="./src/pages/breakingnews/breakingNews.html">Breaking News</a>
+            <a href="./src/pages/curiosidades/curiosidades.html">Curiosidades</a>
+            <a href="./src/pages/esporte/esporte.html">Esporte</a>
+            <a href="./src/pages/fps/fps.html">FPS</a>
+            <a href="./src/pages/rpg/rpg.html">RPG</a>
+            <a href="./src/pages/simulacao/simulacao.html">Simulação</a>
         </div>
     </header>
     <div class="grid-layout">
         <div class="item grande">
-            <img src="/src/imagens/gta6.png" alt="Imagem principal">
+            <img src="./src/imagens/gta6.png" alt="Imagem principal">
             <div class="texto-sobreposto">GTA 6 adiado novamente!</div>
         </div>
 
         <div class="item pequeno">
-            <img src="/src/imagens/psp.jpg" alt="Imagem 2">
+            <img src="./src/imagens/psp.jpg" alt="Imagem 2">
             <div class="texto-sobreposto">Vaza suposto PSP para 2026</div>
         </div>
 
         <div class="item pequeno">
-            <img src="/src/imagens/halo_inifinite.webp" alt="Imagem 3">
+            <img src="./src/imagens/halo_inifinite.webp" alt="Imagem 3">
             <div class="texto-sobreposto">Já é realidade, Halo novo na área!</div>
         </div>
 
