adicionado compatibilidade de pc

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <header>
         <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="./src/imagens/logo.png" alt="Logo Game News"></a>
         <div class="cabecalho">
-            <a href="https://vinicuunha.github.io/projeto_diu.github.io/">Início</a>
+            <a href="https://vinicuunha.github.io/projeto_diu.github.io/">Home</a>
             <a href="./src/pages/breakingnews/breakingNews.html">Breaking News</a>
             <a href="./src/pages/curiosidades/curiosidades.html">Curiosidades</a>
             <a href="./src/pages/esporte/esporte.html">Esporte</a>
             <a href="./src/pages/fps/fps.html">FPS</a>
             <a href="./src/pages/rpg/rpg.html">RPG</a>
             <a href="./src/pages/simulacao/simulacao.html">Simulação</a>
+            <a href="./src/pages/compatibilidade/compatibilidade.html">Verificar compatibilidade</a>
         </div>
     </header>
     <main>
