mudança de rotas

--- a/src/pages/compatibilidade.html
+++ b/src/pages/compatibilidade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game News</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style_compatibilidade.css">
 </head>
 <body>
     <header>
@@ -101,6 +101,6 @@
         <input type="range" id="sliderFonte" min="14" max="20" value="14">
         <span id="valorFonte">16px</span>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script_compatibilidade.js"></script>
 </body>
 </html>
