--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="./src/imagens/logo.png" alt="Logo Game News"></a>
+        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="./src/pages/imagens/logo.png" alt="Logo Game News"></a>
         <div class="cabecalho">
             <a href="https://vinicuunha.github.io/projeto_diu.github.io/">Home</a>
             <a href="./src/pages/breakingNews.html">Breaking News</a>
@@ -24,24 +24,24 @@
   <div class="grid-layout">
     <!-- BLOCO 1 - GRANDE -->
     <div class="item grande">
-      <img src="./src/imagens/gta6.png" alt="Imagem principal">
+      <img src="./src/pages/imagens/gta6.png" alt="Imagem principal">
       <div class="texto-sobreposto">GTA 6 adiado novamente!</div>
     </div>
 
     <!-- BLOCO 2 e 3 - PEQUENOS -->
     <div class="item pequeno">
-      <img src="./src/imagens/psp.jpg" alt="Imagem 2">
+      <img src="./src/pages/imagens/psp.jpg" alt="Imagem 2">
       <div class="texto-sobreposto">Vaza suposto PSP para 2026</div>
     </div>
 
     <div class="item pequeno">
-      <img src="./src/imagens/halo_inifinite.webp" alt="Imagem 3">
+      <img src="./src/pages/imagens/halo_inifinite.webp" alt="Imagem 3">
       <div class="texto-sobreposto">Já é realidade, Halo novo na área!</div>
     </div>
 
     <!-- 4 BLOCOS HORIZONTAIS -->
     <div class="item horizontal">
-      <img src="./src/imagens/eldenring.webp" alt="Notícia 1">
+      <img src="./src/pages/imagens/eldenring.webp" alt="Notícia 1">
       <div class="texto-horizontal">
         <h3>Elden Ring Nightreign receberá a primeira DLC em dezembro</h3>
         <p>Ao revelar Elden Ring Nightreign, a Bandai Namco e a FromSoftware garantiram que o jogo teria uma DLC. 
@@ -51,7 +51,7 @@
     </div>
 
     <div class="item horizontal">
-      <img src="./src/imagens/pokemon.avif" alt="Notícia 2">
+      <img src="./src/pages/imagens/pokemon.avif" alt="Notícia 2">
       <div class="texto-horizontal">
         <h3>Pokémon Legends: Z-A já é o mais vendido nos EUA</h3>
         <p>Oficialmente, a Nintendo revelou que vendeu mais de 5.8 milhões de unidades na primeira semana de disponibilidade, 
@@ -60,7 +60,7 @@
     </div>
 
     <div class="item horizontal">
-      <img src="./src/imagens/monster-hunter-wilds.jpeg" alt="Notícia 3">
+      <img src="./src/pages/imagens/monster-hunter-wilds.jpeg" alt="Notícia 3">
       <div class="texto-horizontal">
         <h3>Monster Hunter Wilds terá nova atualização de conteúdo em dezembro.</h3>
         <p>A Capcom anunciou que a quarta atualizaçao de conteúdo de Monster Hunter Wilds 
@@ -70,7 +70,7 @@
     </div>
 
     <div class="item horizontal">
-      <img src="./src/imagens/project-w-1kt2x.jpg" alt="Notícia 3">
+      <img src="./src/pages/imagens/project-w-1kt2x.jpg" alt="Notícia 3">
       <div class="texto-horizontal">
         <h3>A grande história de sucesso de 2025</h3>
         <p>A grande história de sucesso de 2025 até o momento nos games é um título AA, ou seja, em um patamar menor em termos de orçamento quando comparado a vários dos jogos acima, 
