--- a/src/pages/compatibilidade.html
+++ b/src/pages/compatibilidade.html
@@ -12,7 +12,7 @@
         <div class="cabecalho">
             <a href="https://vinicuunha.github.io/projeto_diu.github.io/">Home</a>
             <a href="/src/pages/breakingNews.html">Breaking News</a>
-            <a href="/src/pages/curiosidades.html">Curiosidades</a>
+            <a href="https://vinicuunha.github.io/projeto_diu.github.io/src/pages/compatibilidade.html">Curiosidades</a>
             <a href="/src/pages/fps.html">FPS</a>
             <a href="/src/pages/esporte.html">Esporte</a>
             <a href="/src/pages/rpg.html">RPG</a>
