--- a/src/pages/curiosidades.html
+++ b/src/pages/curiosidades.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game News</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://vinicuunha.github.io/projeto_diu.github.io/styles.css">
 </head>
 <body>
     <header>
