--- a/src/pages/breakingNews.html
+++ b/src/pages/breakingNews.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header>
-        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="/src/pages/imagens/logo.png" alt=""></a>
+        <a href="https://vinicuunha.github.io/projeto_diu.github.io/"><img id="logo" src="./imagens/logo.png" alt=""></a>
         <div class="cabecalho">
             <a href="https://vinicuunha.github.io/projeto_diu.github.io/">Home</a>
-            <a href="/src/pages/breakingNews.html">Breaking News</a>
-            <a href="/src/pages/curiosidades.html">Curiosidades</a>
-            <a href="/src/pages/fps.html">FPS</a>
-            <a href="/src/pages/esporte.html">Esporte</a>
-            <a href="/src/pages/rpg.html">RPG</a>
-            <a href="/src/pages/simulacao.html">Simulação</a>
-            <a href="/src/pages/compatibilidade.html">Verificar compatibilidade</a>
+            <a href="./breakingNews.html">Breaking News</a>
+            <a href="./curiosidades.html">Curiosidades</a>
+            <a href="./fps.html">FPS</a>
+            <a href="./esporte.html">Esporte</a>
+            <a href="./rpg.html">RPG</a>
+            <a href="./simulacao.html">Simulação</a>
+            <a href="./compatibilidade.html">Verificar compatibilidade</a>
         </div>
     </header>
     <div id="controle-fonte">
